fix spacing ul

--- a/css/main.css
+++ b/css/main.css
@@ -4,9 +4,10 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 400;
   font-size: 12px;
+  line-height: 1.4;
 
-  /*height: 100%;*/
   margin: 0;
+  color: #323232;
 
 }
 
@@ -86,15 +87,43 @@ div h1 {
 
 h3 {
     font-weight: 900;
+    font-family: 'Source Sans Pro', sans-serif;
+    color: #384149;
+
+    margin-bottom: 0.3em;
 }
 
 li {
     list-style: none;
-    font-size: 14pt;
+    font-size: 12pt;
+
+    color: #384149;
 }
 
 ul {
     padding-left: 20px;
+}
+
+#browse {
+  line-height: 2;
+}
+
+#browse a {
+  color: #4c4c4c;
+  text-decoration: none;
+  font-size: 11pt;
+}
+
+#browse li {
+  margin-left: 0;
+}
+
+#browse ul {
+  padding-left: 0;
+}
+
+#browse h3 {
+  margin-bottom: 0;
 }
 
 .bar-group {
@@ -157,4 +186,12 @@ body {
 
 #add:hover {
   color: #8298ac !important;
+}
+
+.pointer:hover {
+  cursor: pointer;
+}
+
+div.no-margin-top {
+  margin-top: 0 !important;
 }
